--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,12 @@ body {
   background-color: #fff;
 }
 
+/*  --------------------- HEADER -----------------------------  */
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .container {
   max-width: 1158px;
   padding-left: 15px;
@@ -34,7 +40,6 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-/*  --------------------- HEADER -----------------------------  */
 
 .navg {
   display: flex;
@@ -124,6 +129,7 @@ section {
 
 .hero-sect {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .hero-cont {
   display: flex;
@@ -138,8 +144,7 @@ section {
   line-height: 1.07;
   text-align: center;
   max-width: 496px;
-  margin-bottom: 24px;
-  padding-top: 188px;
+  margin-bottom: 48px;
 }
 
 .hero-button {
@@ -154,7 +159,6 @@ section {
   height: 56px;
   min-width: 169px;
   border-radius: 4px;
-  margin-top: 24px;
   margin-bottom: 188px;
   border: none;
 }
@@ -218,6 +222,7 @@ img {
 
 .hero-our-team {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
 
 .hero-team {
@@ -289,12 +294,13 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .accent-footer {
   color: #f4f4fd;
 }
 
 .footer-text {
-  margin-top: 16px;
   max-width: 264px;
 }
