--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body {
 
 .container {
   max-width: 1158px;
-  padding: 0 15px;
+  padding: 0 15px 0 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -233,8 +233,7 @@ img {
   line-height: 1.333;
   display: flex;
   align-items: center;
-  column-gap: 24px;
-  row-gap: 48px;
+  gap: 24px;
 }
 .name-cont {
   padding: 32px 0;
@@ -279,7 +278,6 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
   margin-bottom: 8px;
-
   padding: 32px 16px;
 }
 
