--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,8 @@ body {
 
 .header-cont {
   display: flex;
-  padding: 24px 0;
 }
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -68,6 +68,7 @@ body {
   display: flex;
   align-items: center;
   gap: 40px;
+  padding: 24px 0;
 }
 .address-list {
   margin-left: auto;
@@ -79,6 +80,7 @@ body {
 .header-menu-adr {
   display: flex;
   gap: 40px;
+  padding: 24px 0;
 }
 .header-link {
   font-size: 16px;
@@ -191,8 +193,11 @@ img {
 .hero-featr-cont {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 24px;
-  column-gap: 48px;
+  row-gap: 48px;
+  column-gap: 24px;
+  border-radius: 0 0 4px 4px;
+  line-height: 1.333;
+  align-items: center;
 }
 
 .hero-list {
